// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`minInlineSize renders 0 1`] = `
Array [
  .c0 {
  min-inline-size: 0;
}

<div
    className="c0"
  />,
  .c0 {
  min-inline-size: 0;
}

<div
    className="c0"
  />,
  .c0 {
  min-inline-size: 0;
}

<div
    className="c0"
  />,
  .c0 {
  min-inline-size: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`minInlineSize renders function 1`] = `
Array [
  .c0 {
  min-inline-size: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  min-inline-size: has;
}

<div
    className="c0"
  />,
  .c0 {
  min-inline-size: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  min-inline-size: has;
}

<div
    className="c0"
  />,
]
`;

exports[`minInlineSize renders invalid theme path 1`] = `
Array [
  .c0 {
  min-inline-size: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  min-inline-size: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  min-inline-size: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  min-inline-size: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`minInlineSize renders negative number 1`] = `
Array [
  .c0 {
  min-inline-size: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  min-inline-size: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  min-inline-size: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  min-inline-size: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`minInlineSize renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    min-inline-size: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    min-inline-size: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    min-inline-size: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    min-inline-size: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    min-inline-size: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    min-inline-size: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    min-inline-size: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    min-inline-size: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    min-inline-size: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    min-inline-size: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    min-inline-size: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    min-inline-size: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    min-inline-size: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    min-inline-size: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    min-inline-size: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    min-inline-size: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`minInlineSize renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    min-inline-size: July;
  }
}

@media April {
  .c0 {
    min-inline-size: August;
  }
}

@media January {
  .c0 {
    min-inline-size: September;
  }
}

@media April {
  .c0 {
    min-inline-size: November;
  }
}

@media June {
  .c0 {
    min-inline-size: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    min-inline-size: July;
  }
}

@media April {
  .c0 {
    min-inline-size: August;
  }
}

@media January {
  .c0 {
    min-inline-size: September;
  }
}

@media April {
  .c0 {
    min-inline-size: November;
  }
}

@media June {
  .c0 {
    min-inline-size: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    min-inline-size: January;
  }
}

@media April {
  .c0 {
    min-inline-size: December;
  }
}

@media January {
  .c0 {
    min-inline-size: April;
  }
}

@media April {
  .c0 {
    min-inline-size: May;
  }
}

@media June {
  .c0 {
    min-inline-size: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    min-inline-size: January;
  }
}

@media April {
  .c0 {
    min-inline-size: December;
  }
}

@media January {
  .c0 {
    min-inline-size: April;
  }
}

@media April {
  .c0 {
    min-inline-size: May;
  }
}

@media June {
  .c0 {
    min-inline-size: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`minInlineSize renders postitive number 1`] = `
Array [
  .c0 {
  min-inline-size: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  min-inline-size: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  min-inline-size: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  min-inline-size: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`minInlineSize renders string 1`] = `
Array [
  .c0 {
  min-inline-size: July;
}

<div
    className="c0"
  />,
  .c0 {
  min-inline-size: July;
}

<div
    className="c0"
  />,
  .c0 {
  min-inline-size: June;
}

<div
    className="c0"
  />,
  .c0 {
  min-inline-size: June;
}

<div
    className="c0"
  />,
]
`;

exports[`minInlineSize renders valid theme path 1`] = `
Array [
  .c0 {
  min-inline-size: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  min-inline-size: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  min-inline-size: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  min-inline-size: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
